# quadres

./: .gitignore  CHANGELOG.md  LICENSE  README.md  hie.yaml  quadres.cabal
src/QuadRES/: Gardiner.hs  Mnemonics.hs  Parser.hs  RES.hs
test/: Test.hs
test/QuadRES/: ParserTest.hs  RESTest.hs
