cabal-version:       2.4
name:                quadres
version:             0.1.0.0
synopsis:            Implementation of RES in Haskell
description:
  Implementation of the Revised Encoding Scheme for Egyptian Hieroglypic
  in Haskell.
license:             MIT
license-file:        LICENSE
author:              Jonathan Merritt
maintainer:          j.s.merritt@gmail.com
copyright:           Copyright (C) 2020 The QuadRES Developers
category:            Graphics
extra-source-files:  CHANGELOG.md

library
  -- other-modules:
  -- other-extensions:
  exposed-modules:
    QuadRES.Gardiner
    QuadRES.Mnemonics
    QuadRES.Parser
    QuadRES.RES
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:
    -Wall 
    -Wincomplete-uni-patterns 
    -Wincomplete-record-updates 
    -Wmissing-import-lists
  build-depends:
      base ^>=4.12.0.0
    , containers
    , megaparsec
    , mtl
    , parser-combinators
    , text

test-suite quadres-test
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          Test.hs
  other-modules:
    QuadRES.ParserTest
    QuadRES.RESTest
  build-depends:
      base
    , quadres
    , doctest
    , hedgehog
    , megaparsec
    , text

executable quadres
  main-is:             Main.hs
  -- other-extensions:
  hs-source-dirs:      app
  default-language:    Haskell2010
  ghc-options:
    -Wall 
    -Wincomplete-uni-patterns 
    -Wincomplete-record-updates 
    -Wmissing-import-lists
  build-depends:       
      base ^>=4.12.0.0
    , quadres
